# tddft

./: .gitignore  .nvimrc  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  TDDFT.files  archive_list.txt  argon_prop.py  asv.conf.json  az.py  benchmark_mpi.py  example.py  fabfile.py  install_benchmark_lib.sh  jrcd.py  jrcd_mpi.sh  makefile  requirements.txt  setup.py  show.py
benchmarks/: CMakeLists.txt  array.cpp  benchmarks.py  ws_wf_array.cpp  ws_wf_array_cpu.cpp
examples/task/: h_az.py
src/: CMakeLists.txt  abs_pot.c  abs_pot.cpp  abs_pot.h  argon.c  argon.h  array.h  atom.c  atom.cpp  atom.h  calc.c  calc.cpp  calc.h  calc_gpu.cu  calc_gpu.h  const.h  eigen.c  eigen.cpp  eigen.h  fields.c  fields.cpp  fields.h  fourier.h  grid.c  grid.h  hartree_potential.c  hartree_potential.cpp  hartree_potential.h  hydrogen.c  hydrogen.h  integrate.c  integrate.h  jrcd.c  jrcd.h  kn.h  ks_orbitals.c  ks_orbitals.h  linalg.c  linalg.cpp  linalg.h  (+40 more)
src/hartree_potential/: hp.h  hp_o3.c  hp_o3.cpp  hp_o5.c  hp_o5.cpp
src/maxwell/: 1d.cpp  1d.h  3d.cpp  3d.h  cyl_1d.cpp  field_3d.cpp  field_3d.h
src/sfa/: anal.c  anal.cpp  anal.h
src/wavefunc/: 2d.cpp  2d.h  base.h  cart_3d.h  cartesian_2d.h  sh_2d.cpp  sh_2d.h  sh_3d.cpp  sh_3d.h  sh_arr.cpp  sh_arr.h
src/workspace/: cart_wf_3d.cpp  cart_wf_3d.h  common_alg.c  common_alg.cpp  common_alg.h  gps.c  gps.cpp  gps.h  orbs.c  orbs.cpp  orbs.h  orbs_spin.cpp  orbs_spin.h  sae.c  sae.cpp  sae.h  sfa.cpp  sfa.h  wf.c  wf.cpp  wf.h  wf_array.cpp  wf_array.h  wf_array_gpu.cu  wf_array_gpu.h  wf_gpu.cu  wf_gpu.h  wf_gpu_tmp.cu  wf_with_polarization.cpp  wf_with_polarization.h  wf_with_source.cpp  wf_with_source.h
tdse/: __init__.py  bot_client.py  const.py  ground_state.py  mpi.py  plot.py  ppt.py  probability.py  task.py  utils.py
tdse/task/: __init__.py  benchmark.py  get_count_mpi_task.py  maxwell_tdse.py  orb_task.py  sfa_task.py  task.py  tdsfm_task.py  utils.py  wf_array_task.py  wf_task.py
tdse/ui/: progressbar.py
test/: CMakeLists.txt  __init__.py  argon_ground_state.py  argon_prop.py  array.cpp  atom.py  field.py  find_ground_state.py  hartree_potential.py  hydrogen_a_t.py  orbitals.py  orbitals_mpi.py  sfa.py  sh_series.py  tdsfm.py  tdsfm_mpi.py  uh.py  utils.py  uxc.py  ylm_cache.py
wrapper/: abs_pot.pxd  abs_pot.pyx  array.pxd  atom.pxd  atom.pyx  atom.pyx.in  calc.pxd  calc.pyx  calc_gpu.pxd  calc_gpu.pyx  carray.pxd  carray.pyx  field.pxd  field.pyx  grid.pxd  grid.pyx  grid.pyx.in  hartree_potential.pxd  hartree_potential.pyx  hydrogen.pxd  hydrogen.pyx  integrate.pxd  masks.pxd  masks.pyx  masks.pyx.in  maxwell.pxd  maxwell.pyx  maxwell.pyx.in  orbitals.pxd  orbitals.pyx  orbitals.pyx.in  sfa.pxd  sfa.pyx  sphere_grid.pxd  sphere_grid.pyx  sphere_harmonics.pxd  sphere_harmonics.pyx  sphere_kn.pxd  sphere_kn.pyx  sphere_wavefunc.pxd  (+13 more)
